--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
@@ -61,8 +61,8 @@
                                 @*市價績效*@
                                 <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="marketPriceTable">
                                     <option value="">排序</option>
-                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-desc">ETF名稱高至低</option>
-                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
+                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
                                     <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價高至低</option>
                                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價低至高</option>
                                     <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
@@ -120,8 +120,8 @@
                                 @*淨值績效*@
                                 <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="netWorthTable">
                                     <option value="">排序</option>
-                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-desc">ETF名稱高至低</option>
-                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
+                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
                                     <option value="最新淨值高至低" data-sorting-column="NetAssetValue.Value" data-sorting-class="is-desc">最新淨值高至低</option>
                                     <option value="最新淨值低至高" data-sorting-column="NetAssetValue.Value" data-sorting-class="is-asc">最新淨值低至高</option>
                                     <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
@@ -179,8 +179,8 @@
                                 @*市價風險*@
                                 <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="marketRiskTable">
                                     <option value="">排序</option>
-                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-desc">ETF名稱高至低</option>
-                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
+                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
                                     <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價高至低</option>
                                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價低至高</option>
                                     <option value="風險屬性RR5至RR1" data-sorting-column="RiskLevel.Value" data-sorting-class="is-desc">風險屬性RR5至RR1</option>
@@ -227,8 +227,8 @@
                                 @*淨值風險*@
                                 <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="netWorthRiskTable">
                                     <option value="">排序</option>
-                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-desc">ETF名稱高至低</option>
-                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
+                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
                                     <option value="最新淨值高至低" data-sorting-column="NetAssetValue.Value" data-sorting-class="is-desc">最新淨值高至低</option>
                                     <option value="最新淨值低至高" data-sorting-column="NetAssetValue.Value" data-sorting-class="is-asc">最新淨值低至高</option>
                                     <option value="風險屬性RR5至RR1" data-sorting-column="RiskLevel.Value" data-sorting-class="is-desc">風險屬性RR5至RR1</option>
@@ -275,16 +275,16 @@
                                 @*交易狀況*@
                                 <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="tradeTable">
                                     <option value="">排序</option>
-                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-asc">ETF名稱高至低</option>
-                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-desc">ETF名稱低至高</option>
+                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱高至低</option>
+                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱低至高</option>
                                     <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價高至低</option>
                                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價低至高</option>
                                     <option value="折溢價高至低" data-sorting-column="DiscountPremium.Value" data-sorting-class="is-asc">折溢價高至低</option>
                                     <option value="折溢價低至高" data-sorting-column="DiscountPremium.Value" data-sorting-class="is-desc">折溢價低至高</option>
-                                    <option value="最新量高至低" data-sorting-column="LatestVolumeTradingVolume.Key" data-sorting-class="is-asc">最新量高至低</option>
-                                    <option value="最新量低至高" data-sorting-column="LatestVolumeTradingVolume.Key" data-sorting-class="is-desc">最新量低至高</option>
-                                    <option value="最新量-10日高至低" data-sorting-column="LatestVolumeTradingVolumeTenDayAverageVolume.Key" data-sorting-class="is-asc">最新量-10日高至低</option>
-                                    <option value="最新量-10日低至高" data-sorting-column="LatestVolumeTradingVolumeTenDayAverageVolume.Key" data-sorting-class="is-desc">最新量-10日低至高</option>
+                                    <option value="最新量高至低" data-sorting-column="LatestVolumeTradingVolume.Value" data-sorting-class="is-asc">最新量高至低</option>
+                                    <option value="最新量低至高" data-sorting-column="LatestVolumeTradingVolume.Value" data-sorting-class="is-desc">最新量低至高</option>
+                                    <option value="最新量-10日高至低" data-sorting-column="LatestVolumeTradingVolumeTenDayAverageVolume.Value" data-sorting-class="is-asc">最新量-10日高至低</option>
+                                    <option value="最新量-10日低至高" data-sorting-column="LatestVolumeTradingVolumeTenDayAverageVolume.Value" data-sorting-class="is-desc">最新量-10日低至高</option>
                                 </select>
                             </div>
                         </div>
@@ -321,8 +321,8 @@
                                 @*基本資料*@
                                 <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="baseTable">
                                     <option value="">排序</option>
-                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-desc">ETF名稱高至低</option>
-                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode.Value" data-sorting-class="is-asc">ETF名稱低至高</option>
+                                    <option value="ETF名稱高至低" data-sorting-column="FirstBankCode" data-sorting-class="is-desc">ETF名稱高至低</option>
+                                    <option value="ETF名稱低至高" data-sorting-column="FirstBankCode" data-sorting-class="is-asc">ETF名稱低至高</option>
                                     <option value="市價高至低" data-sorting-column="MarketPrice.Value" data-sorting-class="is-desc">市價高至低</option>
                                     <option value="市價低至高" data-sorting-column="MarketPrice.Value" data-sorting-class="is-asc">市價低至高</option>
                                     <option value="幣別高至低" data-sorting-column="CurrencyPair.Key" data-sorting-class="is-desc">幣別高至低</option>
@@ -378,7 +378,7 @@
                                 <span>ETF名稱</span>
                                 <!-- .is-asc: 升冪 -->
                                 <!-- .is-desc: 降冪 -->
-                                <a href="#" class="o-sorting" data-sorting-column="FirstBankCode.Value"></a>
+                                <a href="#" class="o-sorting" data-sorting-column="FirstBankCode"></a>
                             </div>
                         </th>
                         <th data-table-name="marketPriceTable,netWorthTable,marketRiskTable,netWorthRiskTable,tradeTable,baseTable">
@@ -571,14 +571,14 @@
                         <th data-table-name="tradeTable">
                             <div class="c-table__title">
                                 <span>最新量</span>
-                                <a href="#" class="o-sorting" data-sorting-column="LatestVolumeTradingVolume.Key"></a>
+                                <a href="#" class="o-sorting" data-sorting-column="LatestVolumeTradingVolume.Value"></a>
                             </div>
                         </th>
                         @*【最新量-10日量】=> 交易狀況*@
                         <th data-table-name="tradeTable">
                             <div class="c-table__title">
                                 <span>最新量-10日量</span>
-                                <a href="#" class="o-sorting" data-sorting-column="LatestVolumeTradingVolumeTenDayAverageVolume.Key"></a>
+                                <a href="#" class="o-sorting" data-sorting-column="LatestVolumeTradingVolumeTenDayAverageVolume.Value"></a>
                             </div>
                         </th>
 
