fix : FundDetail bug fix

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -2822,7 +2822,7 @@
                     });
                     $('#fundSelect').find("select").on('change', function () {
                         let value = $(this).val();
-                        window.location.href = location.pathname + "?fundid=" + value;
+                        window.location.href = location.pathname + "?id=" + value;
                     });
                 } else {
                     $('#fundSelect').find("select").addClass('u-hidden');
